--- a/lemons_code.ipynb
+++ b/lemons_code.ipynb
@@ -46,7 +46,7 @@
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "import plotly\n",
-    "plotly.tools.set_credentials_file(username='extralime', api_key='q3tUGZrv40fkKyR4uPuL')\n",
+    "plotly.tools.set_credentials_file(username='getanaccount', api_key='forfree')\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
     "import colorlover as cl\n",
