--- a/lemons_plots.ipynb
+++ b/lemons_plots.ipynb
@@ -87,7 +87,7 @@
     "\n",
     "\n",
     "import plotly\n",
-    "plotly.tools.set_credentials_file(username='extralime', api_key='q3tUGZrv40fkKyR4uPuL')\n",
+    "plotly.tools.set_credentials_file(username='getanaccount', api_key='forfree')\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
     "import colorlover as cl\n",
